SYNCOPE-1332: use lambda's for anonymous types and/or method args/calls